--- a/index.html
+++ b/index.html
@@ -1,13 +1,108 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>時間割・課題管理アプリ</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-    <h1>あああああああああ</h1>
-    <script type="text/javascript" src="script.js"></script>
+  <!-- ヘッダー -->
+  <div class="header">
+    <h1 class="catchCopy">時間割・課題管理アプリβ版</h1>
+    <span>今日の日付</span>
+    <h2 id="dateBox"></h2>
+  </div>
+  <div class="eplain">
+    <p>このサイトは、未来航路の活動用に制作したものです。怪しいサイトではないので安心してください。</p>
+  </div>
+  <p>※表はスクロールできる可能性があります。</p>
+  <!-- 通常の時間割 -->
+  <div class="usualSchedule">
+    <table>
+      <caption>通常の時間割</caption>
+      <tr>
+        <th colspan="2" class="periodBox">9/26(火)</th>
+        <th class="baggageRow">持ち物や内容</th>
+        <th class="homeworkRow">課題</th>
+      </tr>
+      <tr>
+        <td class="periodRow">１</td>
+        <td class="subjectRow">食育講演会</td>
+        <td class="baggageRow">あ</td>
+        <td class="homeworkRow">ああああああああああああああああああああああああ</td>
+      </tr>
+      <tr>
+        <td class="periodRow">２</td>
+        <td class="subjectRow">数学</td>
+        <td class="baggageRow"></td>
+        <td class="homeworkRow"></td>
+      </tr>
+      <tr>
+        <td class="periodRow">３</td>
+        <td class="subjectRow">理科</td>
+        <td class="baggageRow"></td>
+        <td class="homeworkRow"></td>
+      </tr>
+      <tr>
+        <td class="periodRow">４</td>
+        <td class="subjectRow">社会</td>
+        <td class="baggageRow"></td>
+        <td class="homeworkRow"></td>
+      </tr>
+      <tr>
+        <td>５</td>
+        <td>英語</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>６</td>
+        <td>総合</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>７</td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </table>
+  </div>
+  <!-- 週末課題 -->
+  <div class="weekendHomework">
+    <table>
+      <caption>週末課題</caption>
+      <tr>
+        <th>教科</th>
+        <th>課題内容</th>
+      </tr>
+      <tr>
+        <td class="subjectRow">国語</td>
+        <td>国語ああああああああああああああああああああああああああああああああああああああああああああ</td>
+      </tr>
+      <tr>
+        <td class="subjectRow">数学</td>
+        <td>数学</td>
+      </tr>
+      <tr>
+        <td class="subjectRow">英語</td>
+        <td>理科</td>
+      </tr>
+      <tr>
+        <td class="subjectRow">理科</td>
+        <td>社会</td>
+      </tr>
+      <tr>
+        <td class="subjectRow">社会</td>
+        <td>英語</td>
+      </tr>
+    </table>
+  </div>
+  <script src="script.js"></script>
 </body>
+  
 </html>
