--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
     <span>今日の日付</span>
     <h2 id="dateBox"></h2>
     <a href="#" class="tab-link active" data-tab="tab1" id="homeTab">ホーム</a>
-    <a href="#" class="tab-link" data-tab="tab2" id="busTab">バス時刻表</a>
-    <a href="#" class="tab-link" data-tab="tab3" id="EnglishTab">今日の五文</a>
+    <a href="#" class="tab-link" data-tab="tab2" id="scheduleTab">時間割</a>
+    <a href="#" class="tab-link" data-tab="tab3" id="EnglishTab">英語の五文</a>
+    <a href="#" class="tab-link" data-tab="tab4" id="classPaperTab">掲示物</a>
   </div>
 
   <div class="tab-container">
     <div class="tab-content" id="tab1">
-      <h1 class="homeTitle">「英語の五文がどれかわからない！」って？このサイトがあれば大丈夫。</h1>
+      <h1 class="homeTitle">もう迷わない。英語の五文</h1>
+      <div class="newsBox">
+        <h1 class="newsBoxTitle">緊急</h1>
+        <p>あああああああ</p>
+      </div>
       <h2 class="headLine">最初に</h2>
       <p>　このサイトは、未来航路の活動用に制作したものです（Cゼミ５３グループ）。怪しいサイトではないので安心してください。
       <br>　基本的にはスマホ推奨のサイトですが、PCやタブレットでも一応動きます（レイアウトが崩れる場合があります）。
@@ -30,23 +35,309 @@
       <h2 class="headLine">お知らせ</h2>
       <p></p>
     </div>
-    
+
     <div class="tab-content" id="tab2">
-      <div class="A4Format">
+      <h2 class="headLine">時間割・課題・週末課題</h2>
+      <p>この時間割は、スプレッドシートを埋め込んだものです。</p>
+      <a href="https://docs.google.com/spreadsheets/d/1yLWe6AD1cDkggYthUu9YZbxUf5GK3as7HVVq-TQZer4" target="_blank">開いてみ飛ぶぞ</a>
+      <iframe src="https://docs.google.com/spreadsheets/d/1yLWe6AD1cDkggYthUu9YZbxUf5GK3as7HVVq-TQZer4" width="100%" height="1000px"></iframe>
+    </div>
+    
+    <div class="tab-content" id="tab3">
+      <div class="newsBox">
+        <h1 class="newsBoxTitle">今日の五文</h1>
+        <h2 class="headLine">Unit 4-3</h2>
+        <p>①I can't finish washing in such a short time.</p>
+        <p>②We should take our showers quickly.</p>
+        <p>③My host father is good at cooking.</p>
+        <p>④Everyone enjoys his dinners, but there's one problem.</p>
+        <p>⑤He puts too much food on my plate.</p>
       </div>
     </div>
-    <div class="tab-content" id="tab3">
-      <h2 class="headLine">Unit 4-3</h2>
-      <p>①I can't finish washing in such a short time.</p>
-      <p>②We should take our showers quickly.</p>
-      <p>③My host father is good at cooking.</p>
-      <p>④Everyone enjoys his dinners, but there's one problem.</p>
-      <p>⑤He puts too much food on my plate.</p>
+    <div class="tab-content" id="tab4">
+      <h2 class="headLine">バス時刻表</h2>
+      <table class="busSchedule">
+        <caption>岡山駅〜岡山操山　直行バス１０月</caption>  
+        <tr>
+          <th rowspan="2">日</th>
+          <th rowspan="2">曜</th>
+          <th>登校時</th>
+          <th>下校時１</th>
+          <th>下校時２</th>
+          <th>備考</th>
+        </tr>
+        <tr>
+          <td>（①7:45,②8:00）</td>
+          <td>（16:05）</td>
+          <td>（17:50）</td>
+          <td>※３月から１０月最終下校17:45</td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>日</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>月</td>
+          <td>通常</td>
+          <td>通常</td>
+          <td>通常</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>火</td>
+          <td>通常</td>
+          <td>なし</td>
+          <td>なし</td>
+          <td>中高合同行事</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>水</td>
+          <td>通常</td>
+          <td>なし</td>
+          <td>なし</td>
+          <td>中高参観日</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>木</td>
+          <td>通常</td>
+          <td>16:40</td>
+          <td>なし</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>6</td>
+          <td>金</td>
+          <td>通常</td>
+          <td>通常</td>
+          <td>通常</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td rowspan="2">7</td>
+          <td rowspan="2">土</td>
+          <td>8:50 / 9:05</td>
+          <td>11:40</td>
+          <td></td>
+          <td rowspan="2">中学校説明会</td>
+        </tr>
+        <tr>
+          <td>12:55 / 13:30</td>
+          <td>15:40</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>8</td>
+          <td>日</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>9</td>
+          <td>月</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>10</td>
+          <td>火</td>
+          <td>通常</td>
+          <td>通常</td>
+          <td>通常</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>11</td>
+          <td>水</td>
+          <td>通常</td>
+          <td>通常</td>
+          <td>通常</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>12</td>
+          <td>木</td>
+          <td>通常</td>
+          <td>16:40</td>
+          <td>なし</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>13</td>
+          <td>金</td>
+          <td>通常</td>
+          <td>通常</td>
+          <td>通常</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>14</td>
+          <td>土</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>15</td>
+          <td>日</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>16</td>
+          <td>月</td>
+          <td>通常</td>
+          <td>通常</td>
+          <td>なし</td>
+          <td>質問教室</td>
+        </tr>
+        <tr>
+          <td>17</td>
+          <td>火</td>
+          <td>通常</td>
+          <td>通常</td>
+          <td>なし</td>
+          <td>質問教室</td>
+        </tr>
+        <tr>
+          <td>18</td>
+          <td>水</td>
+          <td>通常</td>
+          <td>通常</td>
+          <td>なし</td>
+          <td>質問教室</td>
+        </tr>
+        <tr>
+          <td>19</td>
+          <td>木</td>
+          <td>通常</td>
+          <td>16:40</td>
+          <td>なし</td>
+          <td>質問教室</td>
+        </tr>
+        <tr>
+          <td>20</td>
+          <td>金</td>
+          <td>通常</td>
+          <td>通常</td>
+          <td>なし</td>
+          <td>質問教室</td>
+        </tr>
+        <tr>
+          <td>21</td>
+          <td>土</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>22</td>
+          <td>日</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>23</td>
+          <td>月</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr
+          <tr>
+          <td>24</td>
+          <td>火</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>25</td>
+          <td>水</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>26</td>
+          <td>木</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>27</td>
+          <td>金</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>28</td>
+          <td>土</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>29</td>
+          <td>日</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>30</td>
+          <td>月</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>31</td>
+          <td>火</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </table>
+      <h2 class="headLine">１０月の行事予定</h2>
+      <table class="monthSchedule">
+        <caption>１０月の行事予定</caption>  
+        <tr>
+          <th></th>
+        </tr>
+      </table>
     </div>
   </div>
   
   <script src="script.js"></script>
-  
+
 </body>
   
 </html>
