--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <h2 id="dateBox"></h2>
     <a href="#" class="tab-link active" data-tab="tab1" id="homeTab">ホーム</a>
     <a href="#" class="tab-link" data-tab="tab2" id="scheduleTab">時間割</a>
-    <a href="#" class="tab-link" data-tab="tab3" id="EnglishTab">英語の五文</a>
+    <a href="#" class="tab-link" data-tab="tab3" id="EnglishTab">学習</a>
     <a href="#" class="tab-link" data-tab="tab4" id="classPaperTab">掲示物</a>
+    <a href="#" class="tab-link" data-tab="tab5" id="mailaddressTab">メアド</a>
   </div>
 
   <div class="tab-container">
@@ -25,7 +26,7 @@
       <h1 class="homeTitle">もう迷わない。英語の五文</h1>
       <div class="newsBox">
         <h1 class="newsBoxTitle">緊急</h1>
-        <p>あああああああ</p>
+        <p>テスト週間ありまぁ〜す</p>
       </div>
       <h2 class="headLine">最初に</h2>
       <p>　このサイトは、未来航路の活動用に制作したものです（Cゼミ５３グループ）。怪しいサイトではないので安心してください。
@@ -38,7 +39,8 @@
 
     <div class="tab-content" id="tab2">
       <h2 class="headLine">時間割・課題・週末課題</h2>
-      <p>この時間割は、スプレッドシートを埋め込んだものです。</p>
+      <p>　この時間割は、スプレッドシートを直接埋め込んだものです。</p>
+      <p>　スプレッドシートの埋め込みが見れなかったりする人は以下のボタンを押してください。対象のスプレッドシートに直接飛びます。</p>
       <a href="https://docs.google.com/spreadsheets/d/1yLWe6AD1cDkggYthUu9YZbxUf5GK3as7HVVq-TQZer4" target="_blank">開いてみ飛ぶぞ</a>
       <iframe src="https://docs.google.com/spreadsheets/d/1yLWe6AD1cDkggYthUu9YZbxUf5GK3as7HVVq-TQZer4" width="100%" height="1000px"></iframe>
     </div>
@@ -53,9 +55,65 @@
         <p>④Everyone enjoys his dinners, but there's one problem.</p>
         <p>⑤He puts too much food on my plate.</p>
       </div>
+      <div class="newsBox">
+        <h1 class="newsBoxTitle">テスト範囲</h1>
+        <h2 class="headLine">Unit 4-3</h2>
+        <p>①I can't finish washing in such a short time.</p>
+        <p>②We should take our showers quickly.</p>
+        <p>③My host father is good at cooking.</p>
+        <p>④Everyone enjoys his dinners, but there's one problem.</p>
+        <p>⑤He puts too much food on my plate.</p>
+        <h2 class="headLine">Unit 4-3</h2>
+        <p>①I can't finish washing in such a short time.</p>
+        <p>②We should take our showers quickly.</p>
+        <p>③My host father is good at cooking.</p>
+        <p>④Everyone enjoys his dinners, but there's one problem.</p>
+        <p>⑤He puts too much food on my plate.</p>
+        <h2 class="headLine">Unit 4-3</h2>
+        <p>①I can't finish washing in such a short time.</p>
+        <p>②We should take our showers quickly.</p>
+        <p>③My host father is good at cooking.</p>
+        <p>④Everyone enjoys his dinners, but there's one problem.</p>
+        <p>⑤He puts too much food on my plate.</p>
+        <h2 class="headLine">Unit 4-3</h2>
+        <p>①I can't finish washing in such a short time.</p>
+        <p>②We should take our showers quickly.</p>
+        <p>③My host father is good at cooking.</p>
+        <p>④Everyone enjoys his dinners, but there's one problem.</p>
+        <p>⑤He puts too much food on my plate.</p>
+        <h2 class="headLine">Unit 4-3</h2>
+        <p>①I can't finish washing in such a short time.</p>
+        <p>②We should take our showers quickly.</p>
+        <p>③My host father is good at cooking.</p>
+        <p>④Everyone enjoys his dinners, but there's one problem.</p>
+        <p>⑤He puts too much food on my plate.</p>
+        <h2 class="headLine">Unit 4-3</h2>
+        <p>①I can't finish washing in such a short time.</p>
+        <p>②We should take our showers quickly.</p>
+        <p>③My host father is good at cooking.</p>
+        <p>④Everyone enjoys his dinners, but there's one problem.</p>
+        <p>⑤He puts too much food on my plate.</p><h2 class="headLine">Unit 4-3</h2>
+        <p>①I can't finish washing in such a short time.</p>
+        <p>②We should take our showers quickly.</p>
+        <p>③My host father is good at cooking.</p>
+        <p>④Everyone enjoys his dinners, but there's one problem.</p>
+        <p>⑤He puts too much food on my plate.</p>
+      </div>
     </div>
     <div class="tab-content" id="tab4">
-      <h2 class="headLine">バス時刻表</h2>
+      <h2 class="headLine">メニュー</h2>
+      <div class="menu">
+        <h1 class="menuTitle">メニュー</h1>
+        <ul>
+          <a href="#busSchedule">
+            <li>バス時刻表</li>
+          </a>
+          <a href="#October">
+            <li>１０月の行事予定</li>
+          </a>
+        </ul>
+      </div>
+      <h2 class="headLine" id="busSchedule">バス時刻表</h2>
       <table class="busSchedule">
         <caption>岡山駅〜岡山操山　直行バス１０月</caption>  
         <tr>
@@ -70,11 +128,11 @@
           <td>（①7:45,②8:00）</td>
           <td>（16:05）</td>
           <td>（17:50）</td>
-          <td>※３月から１０月最終下校17:45</td>
+          <td>※3月から10月最終下校17:45</td>
         </tr>
         <tr>
           <td>1</td>
-          <td>日</td>
+          <td id="firstDayBox">日</td>
           <td></td>
           <td></td>
           <td></td>
@@ -82,7 +140,7 @@
         </tr>
         <tr>
           <td>2</td>
-          <td>月</td>
+          <td class="dayBox"></td>
           <td>通常</td>
           <td>通常</td>
           <td>通常</td>
@@ -90,7 +148,7 @@
         </tr>
         <tr>
           <td>3</td>
-          <td>火</td>
+          <td class="dayBox"></td>
           <td>通常</td>
           <td>なし</td>
           <td>なし</td>
@@ -98,7 +156,7 @@
         </tr>
         <tr>
           <td>4</td>
-          <td>水</td>
+          <td class="dayBox"></td>
           <td>通常</td>
           <td>なし</td>
           <td>なし</td>
@@ -106,7 +164,7 @@
         </tr>
         <tr>
           <td>5</td>
-          <td>木</td>
+          <td class="dayBox"></td>
           <td>通常</td>
           <td>16:40</td>
           <td>なし</td>
@@ -114,7 +172,7 @@
         </tr>
         <tr>
           <td>6</td>
-          <td>金</td>
+          <td class="dayBox"></td>
           <td>通常</td>
           <td>通常</td>
           <td>通常</td>
@@ -122,7 +180,7 @@
         </tr>
         <tr>
           <td rowspan="2">7</td>
-          <td rowspan="2">土</td>
+          <td rowspan="2" class="dayBox"></td>
           <td>8:50 / 9:05</td>
           <td>11:40</td>
           <td></td>
@@ -135,7 +193,7 @@
         </tr>
         <tr>
           <td>8</td>
-          <td>日</td>
+          <td class="dayBox"></td>
           <td></td>
           <td></td>
           <td></td>
@@ -143,7 +201,7 @@
         </tr>
         <tr>
           <td>9</td>
-          <td>月</td>
+          <td class="dayBox"></td>
           <td></td>
           <td></td>
           <td></td>
@@ -151,7 +209,7 @@
         </tr>
         <tr>
           <td>10</td>
-          <td>火</td>
+          <td class="dayBox"></td>
           <td>通常</td>
           <td>通常</td>
           <td>通常</td>
@@ -159,7 +217,7 @@
         </tr>
         <tr>
           <td>11</td>
-          <td>水</td>
+          <td class="dayBox"></td>
           <td>通常</td>
           <td>通常</td>
           <td>通常</td>
@@ -167,7 +225,7 @@
         </tr>
         <tr>
           <td>12</td>
-          <td>木</td>
+          <td class="dayBox"></td>
           <td>通常</td>
           <td>16:40</td>
           <td>なし</td>
@@ -175,7 +233,7 @@
         </tr>
         <tr>
           <td>13</td>
-          <td>金</td>
+          <td class="dayBox"></td>
           <td>通常</td>
           <td>通常</td>
           <td>通常</td>
@@ -183,7 +241,7 @@
         </tr>
         <tr>
           <td>14</td>
-          <td>土</td>
+          <td class="dayBox"></td>
           <td></td>
           <td></td>
           <td></td>
@@ -191,7 +249,7 @@
         </tr>
         <tr>
           <td>15</td>
-          <td>日</td>
+          <td class="dayBox"></td>
           <td></td>
           <td></td>
           <td></td>
@@ -199,7 +257,7 @@
         </tr>
         <tr>
           <td>16</td>
-          <td>月</td>
+          <td class="dayBox"></td>
           <td>通常</td>
           <td>通常</td>
           <td>なし</td>
@@ -207,7 +265,7 @@
         </tr>
         <tr>
           <td>17</td>
-          <td>火</td>
+          <td class="dayBox"></td>
           <td>通常</td>
           <td>通常</td>
           <td>なし</td>
@@ -215,7 +273,7 @@
         </tr>
         <tr>
           <td>18</td>
-          <td>水</td>
+          <td class="dayBox"></td>
           <td>通常</td>
           <td>通常</td>
           <td>なし</td>
@@ -223,7 +281,7 @@
         </tr>
         <tr>
           <td>19</td>
-          <td>木</td>
+          <td class="dayBox"></td>
           <td>通常</td>
           <td>16:40</td>
           <td>なし</td>
@@ -231,7 +289,7 @@
         </tr>
         <tr>
           <td>20</td>
-          <td>金</td>
+          <td class="dayBox"></td>
           <td>通常</td>
           <td>通常</td>
           <td>なし</td>
@@ -239,7 +297,7 @@
         </tr>
         <tr>
           <td>21</td>
-          <td>土</td>
+          <td class="dayBox"></td>
           <td></td>
           <td></td>
           <td></td>
@@ -247,7 +305,7 @@
         </tr>
         <tr>
           <td>22</td>
-          <td>日</td>
+          <td class="dayBox"></td>
           <td></td>
           <td></td>
           <td></td>
@@ -255,7 +313,7 @@
         </tr>
         <tr>
           <td>23</td>
-          <td>月</td>
+          <td class="dayBox"></td>
           <td></td>
           <td></td>
           <td></td>
@@ -263,7 +321,7 @@
         </tr
           <tr>
           <td>24</td>
-          <td>火</td>
+          <td class="dayBox"></td>
           <td></td>
           <td></td>
           <td></td>
@@ -271,7 +329,7 @@
         </tr>
         <tr>
           <td>25</td>
-          <td>水</td>
+          <td class="dayBox"></td>
           <td></td>
           <td></td>
           <td></td>
@@ -279,7 +337,7 @@
         </tr>
         <tr>
           <td>26</td>
-          <td>木</td>
+          <td class="dayBox"></td>
           <td></td>
           <td></td>
           <td></td>
@@ -287,7 +345,7 @@
         </tr>
         <tr>
           <td>27</td>
-          <td>金</td>
+          <td class="dayBox"></td>
           <td></td>
           <td></td>
           <td></td>
@@ -295,7 +353,7 @@
         </tr>
         <tr>
           <td>28</td>
-          <td>土</td>
+          <td class="dayBox"></td>
           <td></td>
           <td></td>
           <td></td>
@@ -303,7 +361,7 @@
         </tr>
         <tr>
           <td>29</td>
-          <td>日</td>
+          <td class="dayBox"></td>
           <td></td>
           <td></td>
           <td></td>
@@ -311,7 +369,7 @@
         </tr>
         <tr>
           <td>30</td>
-          <td>月</td>
+          <td class="dayBox"></td>
           <td></td>
           <td></td>
           <td></td>
@@ -319,14 +377,14 @@
         </tr>
         <tr>
           <td>31</td>
-          <td>火</td>
+          <td class="dayBox"></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
         </tr>
       </table>
-      <h2 class="headLine">１０月の行事予定</h2>
+      <h2 class="headLine" id="October">１０月の行事予定</h2>
       <table class="monthSchedule">
         <caption>１０月の行事予定</caption>  
         <tr>
@@ -334,10 +392,154 @@
         </tr>
       </table>
     </div>
+    <div class="tab-content" id="tab5">
+      <h2 class="headLine">メールアドレス帳</h2>
+      <p>　このメールアドレス帳は、「21期生 学年 メールアドレス」のGoogleドキュメントに準拠しています。</p>
+      <p>　このサイトを共有したりしなければ外部からアクセスすることはできず、漏洩する可能性は極めて低いです。</p>
+      <p>　コピーするときは、メールアドレスが書いてあるボックスを押してください。押すとクリップボードにコピーされます。</p>
+      <br>
+      <div class="newsBox">
+        <h1 class="newsBoxTitle">メールアドレス帳</h1>
+        <table>
+          <caption>中尾海裕 先生</caption>
+          <tr>
+            <td>miyuu_nakao@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>荻野郁弥 先生</caption>
+          <tr>
+            <td>fumiya_ogino@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>岩月理恵 先生</caption>
+          <tr>
+            <td>rie_iwatsuki@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>平田周吾 先生</caption>
+          <tr>
+            <td>shiyuugo_hirata@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>坪井晶広 先生</caption>
+          <tr>
+            <td>akihiro_tsuboi@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>守時和輝 先生</caption>
+          <tr>
+            <td>kazuki_moritoki@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>犬束秀一 先生</caption>
+          <tr>
+            <td>shiyuuichi_inutsuka@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>福永義弘 先生</caption>
+          <tr>
+            <td>yoshihiro_fukunaga@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>操山高校</caption>
+          <tr>
+            <td>sozan01@pref.okayama.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>81_21期生</caption>
+          <tr>
+            <td>81_sozan21@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>81_R4_1A</caption>
+          <tr>
+            <td>81_sozan_r4_1a@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>81_R4_1B</caption>
+          <tr>
+            <td>81_sozan_r4_1b@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>81_R4_1C</caption>
+          <tr>
+            <td>81_sozan_r4_1c@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>81_岡山操山中学校全生徒【基本グループ】</caption>
+          <tr>
+            <td>81_sozan-jhs-students@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>81_岡山操山中学校全教職員【基本グループ】</caption>
+          <tr>
+            <td>81_sozan-jhs-teachers@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>岡山操山中学校管理者01</caption>
+          <tr>
+            <td>sozan-jhs-admin01@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>岡山操山中学校管理者02</caption>
+          <tr>
+            <td>sozan-jhs-admin02@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>岡山操山中学校管理者03</caption>
+          <tr>
+            <td>sozan-jhs-admin03@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>02_岡山操山高等学校全教職員【基本グループ】</caption>
+          <tr>
+            <td>02_sozan-teachers@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>02_岡山操山高等学校全生徒【基本グループ】</caption>
+          <tr>
+            <td>02_sozan-students@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+        <table>
+          <caption>03_岡山操山高等学校（通信制）全教職員【基本グループ】</caption>
+          <tr>
+            <td>03_sozan-c-teachers@gse.okayama-c.ed.jp</td>
+          </tr>
+        </table>
+　　　　　<h2>1年・・・812322r</h2>
+　　　　　<h2>2年・・・812221b</h2>
+      </div>
+    </div>
   </div>
   
   <script src="script.js"></script>
 
+  <!--
+  This script places a badge on your repl's full-browser view back to your repl's cover
+  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
+  teal, blue, blurple, magenta, pink!
+  -->
+  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
 </body>
   
 </html>
